--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <title>Soirée V.I.P</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fafafa;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #e91e63;
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+    h2 {
+      color: #0070ba;
+      font-size: 22px;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 90%;
+      padding: 12px;
+      margin: 10px 0;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      background-color: #0070ba;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+    button:hover {
+      background-color: #005c99;
+    }
+    p {
+      font-size: 15px;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
 
+  <div class="container">
+    <h1>Soirée V.I.P</h1>
+    <h2>Inscription en ligne - 30 €</h2>
+    <p>Remplis ce formulaire pour réserver ta place</p>
+
+    <form action="https://formsubmit.co/afterflow.vips@gmail.com" method="POST">
+      <input type="text" name="Prénom" placeholder="Prénom" required><br>
+      <input type="text" name="Nom" placeholder="Nom" required><br>
+      <input type="email" name="Email" placeholder="Adresse e-mail" required><br>
+
+      <!-- Message automatique de confirmation -->
+      <input type="hidden" name="_autoresponse" value="Merci ! Ton inscription à la Soirée V.I.P est confirmée.">
+
+      <!-- Redirection vers la page merci.html -->
+      <input type="hidden" name="_next" value="merci.html">
+
+      <button type="submit">Valider</button>
+    </form>
+  </div>
+
+</body>
+</html>
