--- a/merci.html
+++ b/merci.html
@@ -2,63 +2,46 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Merci pour ton inscription !</title>
+  <title>Merci pour votre inscription !</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #fafafa;
-      color: #333;
-      margin: 0;
-      padding: 40px 20px;
+      background-color: #0c0c0c;
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-    }
-    .container {
-      max-width: 500px;
-      margin: auto;
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      padding: 60px 20px;
     }
     h1 {
-      color: #4caf50;
-      font-size: 28px;
-      margin-bottom: 15px;
+      color: gold;
+      font-size: 32px;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px gold;
     }
     p {
       font-size: 18px;
-      color: #555;
-      margin-bottom: 20px;
-      line-height: 1.5;
+      margin-bottom: 30px;
     }
-    strong {
-      color: #e91e63;
-    }
-    a.paypal-button {
-      background-color: #0070ba;
-      color: white;
-      text-decoration: none;
-      padding: 15px 40px;
-      font-size: 18px;
-      border-radius: 8px;
+    a {
       display: inline-block;
-      transition: background-color 0.3s ease;
-      margin-top: 20px;
-    }
-    a.paypal-button:hover {
-      background-color: #005c99;
+      padding: 12px 25px;
+      background: gold;
+      color: black;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Merci pour ton inscription ! 🎉</h1>
-    <p>Ta demande a bien été reçue.<br>
-      Pour finaliser ta réservation, merci d'envoyer <strong>30 €</strong> via PayPal en cliquant sur le bouton ci-dessous.</p>
-    <p><strong>Important :</strong> Indique en message PayPal ton <strong>Prénom et Nom</strong> pour valider ton inscription à la soirée.</p>
-    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" class="paypal-button" target="_blank" rel="noopener">Payer maintenant</a>
-  </div>
+  <h1>🎉 Merci pour votre inscription !</h1>
+  <p>Vous pouvez maintenant envoyer <strong>30 €</strong> via PayPal :</p>
+  <p>
+    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" target="_blank">Payer maintenant</a>
+  </p>
+  <p>📌 N'oubliez pas d'ajouter votre <strong>nom et prénom</strong> dans le message du paiement.</p>
+  <p>📩 Vous recevrez un mail de confirmation sous 24h.</p>
 
 </body>
 </html>
