--- a/index.html
+++ b/index.html
@@ -5,8 +5,92 @@
   <title>Afterflow V.I.P.S</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="style.css" rel="stylesheet" />
+  <style>
+    /* Fond noir */
+    body {
+      margin: 0;
+      background-color: #000;
+      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* Canvas confettis en fond */
+    #confetti-canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
+    }
+
+    /* Le contenu au-dessus */
+    header, section, form, footer {
+      position: relative;
+      z-index: 1;
+      max-width: 480px;
+      margin: 0 auto;
+      padding: 10px 20px;
+    }
+
+    /* Exemple style titre */
+    .logo {
+      text-align: center;
+      font-size: 2.5rem;
+      margin: 30px 0;
+      color: gold;
+      text-shadow: 0 0 10px gold;
+    }
+
+    /* Style général simplifié */
+    form input, form button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 12px;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: none;
+    }
+    form input {
+      background: #222;
+      color: white;
+    }
+    form button {
+      background: gold;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    form button:hover {
+      background: #e6b800;
+    }
+
+    /* Sections instructions et conditions */
+    .instructions, .conditions {
+      background: #111;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 25px;
+      box-shadow: 0 0 15px #444;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      margin-bottom: 40px;
+      color: gold;
+    }
+  </style>
 </head>
 <body>
+
+  <canvas id="confetti-canvas"></canvas>
 
   <header>
     <h1 class="logo">AFTERFLOW V.I.P.S</h1>
@@ -23,7 +107,7 @@
 
   <section class="instructions">
     <p>✅ Après votre inscription, envoyez <strong>30 €</strong> via PayPal :</p>
-    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" target="_blank">paypal.me/AFTERFLOWVIPS/30</a>
+    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" target="_blank" style="color: gold;">paypal.me/AFTERFLOWVIPS/30</a>
     <div id="qrcode"></div>
     <p>📌 Mettez votre <strong>nom et prénom</strong> dans le message lors du paiement.</p>
     <p>📩 Vous recevrez une confirmation par mail dans les 24h.</p>
@@ -40,14 +124,93 @@
   </section>
 
   <footer>
-    <p>📸 <a href="https://instagram.com/afterflow_vip" target="_blank">@afterflow_vip</a></p>
-    <p>👻 <a href="https://www.snapchat.com/add/afterflow-events" target="_blank">afterflow-events</a></p>
+    <p>Contact : afterflow.vips@gmail.com</p>
   </footer>
 
   <audio id="sound-effect" src="https://www.soundjay.com/buttons/sounds/button-29.mp3" preload="auto"></audio>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
   <script>
+    // Confettis animés simples
+    const canvas = document.getElementById('confetti-canvas');
+    const ctx = canvas.getContext('2d');
+    let W, H;
+    let confettis = [];
+
+    function randomRange(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    class Confetti {
+      constructor() {
+        this.x = randomRange(0, W);
+        this.y = randomRange(-20, H);
+        this.size = randomRange(5, 12);
+        this.speedY = randomRange(1, 3);
+        this.speedX = randomRange(-1, 1);
+        this.color = `hsl(${randomRange(0, 360)}, 70%, 60%)`;
+        this.opacity = randomRange(0.7, 1);
+        this.tilt = randomRange(-10, 10);
+        this.tiltSpeed = randomRange(0.1, 0.3);
+      }
+
+      update() {
+        this.y += this.speedY;
+        this.x += this.speedX;
+        this.tilt += this.tiltSpeed;
+
+        if (this.y > H) {
+          this.y = -this.size;
+          this.x = randomRange(0, W);
+        }
+        if (this.x > W) this.x = 0;
+        else if (this.x < 0) this.x = W;
+      }
+
+      draw() {
+        ctx.beginPath();
+        ctx.lineWidth = this.size / 2;
+        ctx.strokeStyle = this.color;
+        ctx.moveTo(this.x + this.tilt, this.y);
+        ctx.lineTo(this.x, this.y + this.tilt + this.size / 2);
+        ctx.stroke();
+      }
+    }
+
+    function initConfettis() {
+      confettis = [];
+      for (let i = 0; i < 120; i++) {
+        confettis.push(new Confetti());
+      }
+    }
+
+    function resize() {
+      W = window.innerWidth;
+      H = window.innerHeight;
+      canvas.width = W;
+      canvas.height = H;
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, W, H);
+      confettis.forEach(c => {
+        c.update();
+        c.draw();
+      });
+      requestAnimationFrame(animate);
+    }
+
+    window.addEventListener('resize', () => {
+      resize();
+      initConfettis();
+    });
+
+    // Init
+    resize();
+    initConfettis();
+    animate();
+
+    // Script formulaire et QR code
     const sound = document.getElementById("sound-effect");
 
     document.getElementById("registration-form").addEventListener("submit", function(e) {
@@ -66,5 +229,6 @@
 
     document.getElementById("places").textContent = 12;
   </script>
+
 </body>
 </html>
