--- a/merci.html
+++ b/merci.html
@@ -2,46 +2,52 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Merci pour votre inscription !</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Merci pour votre inscription</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
-      background-color: #0c0c0c;
-      color: white;
-      font-family: 'Segoe UI', sans-serif;
+      background-color: #000;
+      color: gold;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
-      padding: 60px 20px;
+      padding: 50px 20px;
+      margin: 0;
     }
     h1 {
-      color: gold;
-      font-size: 32px;
+      font-size: 2.8rem;
       margin-bottom: 20px;
-      text-shadow: 0 0 10px gold;
+      text-shadow: 0 0 8px gold;
     }
     p {
-      font-size: 18px;
+      font-size: 1.3rem;
       margin-bottom: 30px;
     }
     a {
-      display: inline-block;
-      padding: 12px 25px;
-      background: gold;
-      color: black;
+      color: gold;
       text-decoration: none;
-      border-radius: 8px;
       font-weight: bold;
+      border: 2px solid gold;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background 0.3s ease;
+    }
+    a:hover {
+      background-color: gold;
+      color: black;
     }
   </style>
 </head>
 <body>
-
-  <h1>🎉 Merci pour votre inscription !</h1>
-  <p>Vous pouvez maintenant envoyer <strong>30 €</strong> via PayPal :</p>
+  <h1>Merci pour votre inscription ! 🎉</h1>
+  <p>Votre inscription a bien été prise en compte.<br />
+  Pour valider votre place, merci d’envoyer 30 € via PayPal en précisant votre nom et prénom.</p>
   <p>
-    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" target="_blank">Payer maintenant</a>
+    <a href="https://www.paypal.me/AFTERFLOWVIPS/30" target="_blank">Payer via PayPal</a>
   </p>
-  <p>📌 N'oubliez pas d'ajouter votre <strong>nom et prénom</strong> dans le message du paiement.</p>
-  <p>📩 Vous recevrez un mail de confirmation sous 24h.</p>
-
+  <p>Un email de confirmation vous sera envoyé dès réception du paiement.<br />
+  Contact : <a href="mailto:afterflow.vips@gmail.com">afterflow.vips@gmail.com</a></p>
+  <p>
+    <a href="index.html">Retour à la page d’accueil</a>
+  </p>
 </body>
 </html>
